Update Documentation, Docker builds, and CI builds (#124)
* Mark recording as complete if attempted to be written as empty

* Invert dockerignore, explicitly mention what to include

* Remove mentions of CLIENT_ID, no longer used

* Add multi-stage build for creating empty migrated db

* Add missing files -- LICENSE and docs

* Create application package without zipping

* Remove metadata plugin and don't use property file for filtering

* Move sample-ds.env to the correct folder

* Merge the sample config into just one, why have three?

* Spiff up Dockerfile multi-stage build and use distroless

* Update docker-compose.yml to work with the updated Dockerfile

* Remove extra dot from BUILD_DATE

* Update assembly and resource plugins

* Use go-offline-maven-plugin and package in offline mode

* MAINTAINER has been deprecated use LABEL instead

* Add start.sh for Linux users

* Wrong slash \ -> /

* Control the output of the assembly better

* Add Makefile for easy building

* Use a different plugin for offline cache building

* Generate date with explicit UTC and match release format

* Change integration-test to just test, not trying to package as well

* Rename upload-artifact -> package

* Just build already :)

* Add Batch and no transfer progress flags to maven commands

* NTP is very new, Batch will suffice

* Attach workspace before run

* Zip store artifacts

* Artifact name must be exact

* Save cache after packaging

* Cannot update cache, so removing but caching artifacts after test

* Remove unused files

* Add editorconfig

* Add build target and make the variables optional if env sets them

* Update Dockerfile to match latest maven build

* Update general documentation

* Add more assembly files needed for docker-compose for alternate run

* Update self-hosting docs

* Add more rules for Kotlin

* Use -B when building docker image

* Update to Koin 2.0.1 and fix changed api