@@ -8,8 +8,9 @@ this bot, it can be self-hosted without any issues in one of the following ways.
 ## Contents
 
 - [Pre-Requisites](#pre-requisites)
-  - [Local (or VPS)](#local-or-vps)
-  - [Docker](#docker)
+    - [Minio](#minio)
+  - [Local](#local)
+  - [Docker Compose](#docker-compose)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -23,21 +24,30 @@ this bot, it can be self-hosted without any issues in one of the following ways.
     - Access Key _(may be optional if your store does not require it)_
     - Secret Key _(may be optional if your store does not require it)_
 
-## Local (or VPS)
+**If any of the URLs that the bot spits out are `localhost`, only the person running the bot will be able to access the recordings.**
+
+### Minio
+
+After you start Minio, please create the bucket set as the `DS_BUCKET` environment variable. The Access and Secret keys
+can either be made up, if running locally, or need to be specific values if using Minio as a gateway to a different store.
+Please consult the Minio documentation for more details.
+
+## Local
 
 These instructions are for those who want to run the bot either on their computer or on a server, for this you'll need to
-have [install Java 9+ JRE](http://www.oracle.com/technetwork/java/javase/downloads/index.html).
+have [install Java 11+](https://adoptopenjdk.net/).
 
 - Download the [latest release](https://github.com/guacamoledragon/throw-voice/releases) of the bot and extract it,
-  you're looking for `throw-voice-<version>-release.zip`.
+  you're looking for `throw-voice-<version>.zip`.
 
 - Configure Bot
   - Windows Users:
     - Edit `start.bat` and enter the appropriate values for all the variables described under [environment variables](./environment-variables.md).
     - Save `start.bat`, start bot by double-click'ing `start.bat`
-  - Linux Users:
-    - Drop down to a shell and set all the variables described under [environment variables](./environment-variables.md).
-    - Start bot by running: `java -Xmx512m --add-modules java.xml.bind -cp 'throw-voice-<version>.jar:lib\*' tech.gdragon.App`
+  - Linux/macOS Users:
+    - Edit `start.sh` and enter the appropriate values for all the variables described under [environment variables](./environment-variables.md).
+    - Save `start.sh`, start bot by double-click'ing `start.sh`
+      - If you don't have a GUI, then drop to a terminal and execute `start.sh`
 
 - Navigate to `http://localhost:<PORT>` to add the bot to your Guild. 
 
@@ -45,14 +55,13 @@ Done!
 
 _Note: If you're deploying on your own VPS, then you'll need a bit more setup as you may be using NGINX or Apache._
 
-## Docker
+## Docker Compose
 
-If Docker is your jam, the easiest thing to do is to create a `.env` file with all the variables described under
-[environment variables](./environment-variables.md). Then:
+If Docker is your jam, the easiest thing to do is to modify the `.env` file included with only the variables already included,
+for reference see [environment variables](./environment-variables.md). Then use [`docker-compose`](https://docs.docker.com/compose/):
 
-    docker run -it --env-file .env --env JAVA_OPTS="-Xmx512m --add-modules java.xml.bind" -p <PORT>:<PORT> gdragon/throw-voice:<version>
+    docker-compose up # optionally, --detach
 
-This repo also contains a [`docker-compose.yml`](../docker-compose.yml) that can be used if desired, but it's mostly used
-for my deployment purposes.
-
-See the [Docker Hub](https://hub.docker.com/r/gdragon/throw-voice/) registry for more details on the container.
+This will start both the bot on http://localhost:3000 and minio on http://localhost:9000, and that's really all there is.
+The recordings will be saved under `DATA_DIR\recordings` on your local machine, and can also be accessed through the Minio
+web interface.
